# ai-data-hackathon-2024

./: .env.local  .gitignore  README.md  app.py  pyproject.toml
notebooks/: agent.ipynb  snowflake.ipynb
notebooks/.ipynb_checkpoints/: agent-checkpoint.ipynb
output/: output.md
src/: model.py  tools.py
